# repo-2939-starcoin

abi/decoder/: Cargo.toml
abi/resolver/: Cargo.toml
abi/resolver/src/: lib.rs
cmd/airdrop/: Cargo.toml
cmd/db-exporter/: Cargo.toml
cmd/indexer/: Cargo.toml
cmd/starcoin/: Cargo.toml
commons/accumulator/src/: tree.rs
commons/forkable-jellyfish-merkle/src/: jellyfish_merkle_test.rs  mock_tree_store.rs
commons/proptest-helpers/: Cargo.toml
consensus/src/: cn.rs  consensus.rs  consensus_test.rs  lib.rs
dataformat-generator/: build.rs
devtools/x/: Cargo.toml
executor/: Cargo.toml
executor/src/: block_executor.rs
executor/tests/: executor_test.rs  script_function_test.rs
network-rpc/api/: Cargo.toml
network-rpc/api/src/: remote_chain_state.rs
rpc/client/src/: remote_state_reader.rs
rpc/generated_rpc_schema/: contract_api.json
state/api/: Cargo.toml
state/api/src/: chain_state.rs
state/service/: Cargo.toml
state/service/src/: service.rs
state/state-tree/src/: state_tree_test.rs
state/statedb/: Cargo.toml
state/statedb/src/: lib.rs  tests.rs
storage/src/: lib.rs  storage.rs  upgrade.rs
test-helper/: Cargo.toml
types/src/: account.rs  lib.rs
vm/compiler/: Cargo.toml
vm/compiler/src/: bytecode_transpose.rs  lib.rs
vm/gas-algebra-ext/: Cargo.toml
vm/move-coverage/: Cargo.toml
vm/move-explain/: Cargo.toml
vm/move-package-manager/: Cargo.toml
vm/move-prover/: Cargo.toml
vm/natives/: Cargo.toml
vm/natives/src/: debug.rs  lib.rs
vm/resource-viewer/: Cargo.toml
vm/resource-viewer/src/: lib.rs
vm/starcoin-gas/: Cargo.toml
vm/starcoin-transactional-test-harness/: Cargo.toml
vm/starcoin-transactional-test-harness/src/: in_memory_state_cache.rs  lib.rs  remote_state.rs
vm/stdlib/: Cargo.toml
vm/stdlib/src/: lib.rs
vm/transaction-builder-generator/: Cargo.toml
vm/types/: Cargo.toml
vm/types/src/: lib.rs  state_view.rs  write_set.rs
vm/types/src/state_store/: mod.rs  state_key.rs  state_value.rs
vm/types/src/transaction/: mod.rs
vm/vm-runtime/: Cargo.toml
vm/vm-runtime/src/: data_cache.rs  starcoin_vm.rs
vm/vm-runtime/src/move_vm_ext/: mod.rs  session.rs  vm.rs
