[package]
name = "starcoin-abi-resolver"
version = "1.11.9"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starcoin-vm-types = {path = "../../vm/types"}
starcoin-abi-types = {path = "../types"}
anyhow="~1"
starcoin-resource-viewer = {path = "../../vm/resource-viewer"}
move-model = { git = "https://github.com/starcoinorg/move", rev = "aeec6c3f4b3fa1fc448c86f07abd8b839ed24570"  }
[dev-dependencies]
stdlib = {path = "../../vm/stdlib"}
serde_json = "1"
test-helper= {path = "../../test-helper"}
