[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
name = "starcoin-abi-resolver"
version = "1.12.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starcoin-vm-types = { path = "../../vm/types" }
starcoin-abi-types = { path = "../types" }
anyhow = "~1"
starcoin-resource-viewer = { path = "../../vm/resource-viewer" }
move-model = { git = "https://github.com/starcoinorg/move", rev = "6a4e17971640f55a83feb032a8bb73ce4fc1c6f4" }
[dev-dependencies]
stdlib = { path = "../../vm/stdlib" }
serde_json = "1"
test-helper = { path = "../../test-helper" }
