[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-proptest-helpers"
publish = false
version = "1.12.5"

[dependencies]
crossbeam = "0.7.3"
diem-proptest-helpers = { package = "diem-proptest-helpers", git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
proptest = "1.0.0"
proptest-derive = "0.3.0"
