[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-proptest-helpers"
publish = false
version = "1.12.5"

[dependencies]
crossbeam = "0.7.3"
diem-proptest-helpers = { package = "diem-proptest-helpers", git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
proptest = "1.0.0"
proptest-derive = "0.3.0"
