[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "gas-algebra-ext"
publish = false
version = "1.12.5"

[dependencies]
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-vm-test-utils = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
starcoin-natives = { path = "../natives" }
serde = { version = "1.0.130", default-features = false }