[package]
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem Move abort code explanations"
edition = "2021"
homepage = "https://diem.org"
license = "Apache-2.0"
name = "starcoin-move-explain"
publish = false
repository = "https://github.com/diem/diem"
version = "1.12.6"

[dependencies]
bcs-ext = {package = "bcs-ext", path = "../../commons/bcs_ext"}
clap = {version = "3", features = ["derive"]}
move-core-types = {git = "https://github.com/starcoinorg/move", rev = "8c929c82385942879336e05bc40e8718d7adcb8e"}
stdlib = {package = "stdlib", path = "../stdlib"}

[features]
default = []
