[package]
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem Move abort code explanations"
edition = "2021"
homepage = "https://diem.org"
license = "Apache-2.0"
name = "starcoin-move-explain"
publish = false
repository = "https://github.com/diem/diem"
version = "1.12.6"

[dependencies]
bcs-ext = {package = "bcs-ext", path = "../../commons/bcs_ext"}
clap = {version = "3", features = ["derive"]}
move-core-types = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
stdlib = {package = "stdlib", path = "../stdlib"}

[features]
default = []
