[package]
authors = ["Diem Association <opensource@diem.org>"]
description = "Diem Move abort code explanations"
edition = "2021"
homepage = "https://diem.org"
license = "Apache-2.0"
name = "starcoin-move-explain"
publish = false
repository = "https://github.com/diem/diem"
version = "1.12.5"

[dependencies]
clap = { version = "3", features = ["derive"] }
stdlib = { package = "stdlib", path = "../stdlib" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "e6fdef3541338e77e142d42d76544c721903abe5" }
bcs-ext = { package = "bcs-ext", path = "../../commons/bcs_ext" }

[features]
default = []
