[package]
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2021"
name = "starcoin-natives"
version = "1.12.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3"
libsecp256k1 = "0.7.1"
log = "0.4.14"
move-binary-format = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-command-line-common = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-core-types = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-docgen = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-errmapgen = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-prover = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-stdlib = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-vm-runtime = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-vm-types = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
num_enum = "0.5.7"
ripemd160 = "0.9.1"
smallvec = "1.10.0"
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
starcoin-uint = {path = "../../types/uint"}
starcoin-vm-types = {path = "../types"}
tiny-keccak = {version = "2", features = ["keccak"]}
walkdir = "2.3.1"

[dev-dependencies]
hex = "0.4"
rand = "0.8.5"

[features]
testing = ["move-stdlib/testing"]
