[package]
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2021"
name = "starcoin-natives"
version = "1.12.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-errmapgen = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
move-docgen = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
move-command-line-common = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
move-prover = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
move-vm-runtime = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc" }
log = "0.4.14"
walkdir = "2.3.1"
smallvec = "1.8.1"
tiny-keccak = { version = "2", features = ["keccak"] }
libsecp256k1 = "0.7.1"
arrayref = "0.3"
num_enum = "0.5.7"
starcoin-uint = { path = "../../types/uint" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "03ee90e3d779cb7f4293b4f181951e10d10b19e4" }
ripemd160 = "0.9.1"

[dev-dependencies]
hex = "0.4"
rand = "0.8.5"

[features]
testing = ["move-stdlib/testing"]
