[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-resource-viewer"
publish = false
version = "1.12.6"

[dependencies]
anyhow = "1.0.41"
hex = "0.4.3"
move-binary-format = {git = "https://github.com/starcoinorg/move", rev = "6ec4facd14fe3a526be48b989e7b38eb8fbb17b3"}
move-core-types = {git = "https://github.com/starcoinorg/move", rev = "6ec4facd14fe3a526be48b989e7b38eb8fbb17b3"}
serde = {version = "1.0.130", features = ["derive", "rc"]}
serde_json = "1.0"
starcoin-vm-types = {path = "../types"}
