[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-resource-viewer"
publish = false
version = "1.12.6"

[dependencies]
anyhow = "1.0.41"
hex = "0.4.3"
move-binary-format = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
move-core-types = {git = "https://github.com/starcoinorg/move", rev = "6cc489dc9c3b27e2c86e55c77f7a524ba27fdf3d"}
serde = {version = "1.0.130", features = ["derive", "rc"]}
serde_json = "1.0"
starcoin-vm-types = {path = "../types"}
