[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-resource-viewer"
publish = false
version = "1.12.5"

[dependencies]
starcoin-vm-types = { path = "../types" }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "e6fdef3541338e77e142d42d76544c721903abe5" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "e6fdef3541338e77e142d42d76544c721903abe5" }
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive", "rc"] }
anyhow = "1.0.41"
hex = "0.4.3"
