[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-gas"
publish = false
version = "1.12.5"

[dependencies]
gas-algebra-ext = { path = "../gas-algebra-ext" }
clap = { version = "3", features = ["derive"] }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "6a4e17971640f55a83feb032a8bb73ce4fc1c6f4" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "6a4e17971640f55a83feb032a8bb73ce4fc1c6f4" }
move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "6a4e17971640f55a83feb032a8bb73ce4fc1c6f4" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "6a4e17971640f55a83feb032a8bb73ce4fc1c6f4" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "6a4e17971640f55a83feb032a8bb73ce4fc1c6f4" }
starcoin-natives = { path = "../natives" }
starcoin-logger = {path = "../../commons/logger"}