[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-gas"
publish = false
version = "1.12.5"

[dependencies]
gas-algebra-ext = { path = "../gas-algebra-ext" }
clap = { version = "3", features = ["derive"] }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "70076ce63f89b03cdeae78fd6564cf9103b6c4aa" }
starcoin-natives = { path = "../natives" }
starcoin-logger = {path = "../../commons/logger"}